--- a/AVP2010ModelViewer/AVP2010ModelViewer.vcxproj
+++ b/AVP2010ModelViewer/AVP2010ModelViewer.vcxproj
@@ -174,6 +174,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Textures.h" />
+    <ClInclude Include="umHalf.h" />
     <ClInclude Include="ViewFrustrum.h" />
   </ItemGroup>
   <ItemGroup>
@@ -204,6 +205,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="umHalf.inl" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders_model.hlsl" />
