--- a/AVP2010ModelViewer/AVP2010ModelViewer.vcxproj.filters
+++ b/AVP2010ModelViewer/AVP2010ModelViewer.vcxproj.filters
@@ -60,6 +60,9 @@
     <ClInclude Include="ViewFrustrum.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="umHalf.h">
+      <Filter>Исходные файлы</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -114,6 +117,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="umHalf.inl">
+      <Filter>Исходные файлы</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Shaders_model.hlsl">
